--- a/webappbuilder/themes/tabbed/app.css
+++ b/webappbuilder/themes/tabbed/app.css
@@ -130,3 +130,6 @@ body {
   height: 50px;
   z-index: 1001;
 }
+.ol-overviewmap {
+  bottom: 35px;
+}
